// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suggest Empty input 1`] = `
Array [
  Object {
    "id": 10,
    "rating": 3,
    "title": "Hello world!",
  },
  Object {
    "id": 20,
    "rating": 2,
    "title": "Foo bar",
  },
  Object {
    "id": 30,
    "rating": 1,
    "title": "-BAZZZ-",
  },
]
`;

exports[`Suggest Equality 1`] = `
Array [
  Object {
    "id": 20,
    "rating": 2,
    "title": "[Foo] [bar]",
  },
]
`;

exports[`Suggest Joined words 1`] = `
Array [
  Object {
    "id": 20,
    "rating": 2,
    "title": "[Foo] [bar]",
  },
]
`;

exports[`Suggest Prefix 1`] = `
Array [
  Object {
    "id": 20,
    "rating": 2,
    "title": "Foo [ba]r",
  },
  Object {
    "id": 30,
    "rating": 1,
    "title": "-[BA]ZZZ-",
  },
]
`;

exports[`Suggest Prio 1`] = `
Array [
  Object {
    "id": 30,
    "rating": 2,
    "title": "-BAZZZ-",
  },
  Object {
    "id": 20,
    "rating": 1,
    "title": "Foo bar",
  },
  Object {
    "id": 10,
    "rating": 0,
    "title": "Hello world!",
  },
]
`;

exports[`Suggest Typos 1`] = `
Array [
  Object {
    "id": 10,
    "rating": 3,
    "title": "[Hello] world!",
  },
]
`;

exports[`Suggest Typos 2`] = `
Array [
  Object {
    "id": 10,
    "rating": 3,
    "title": "[Hello] world!",
  },
]
`;
